--- a/index.html
+++ b/index.html
@@ -10,19 +10,52 @@
     <div class="container">
         <header>
             <h1>🌳 결정 트리 만들기</h1>
-            <p>질문과 답변을 추가하여 나만의 알고리즘을 만들어보세요!</p>
+            <p>질문과 답변을 추가하고 선으로 연결하여 알고리즘을 시각화하세요!</p>
         </header>
 
         <div class="controls">
-            <button id="addQuestion" class="btn btn-primary">➕ 질문 추가</button>
-            <button id="addAnswer" class="btn btn-success">✅ 답변 추가</button>
-            <button id="clearAll" class="btn btn-danger">🗑️ 전체 삭제</button>
-            <button id="exportTree" class="btn btn-info">💾 저장</button>
+            <div class="control-group">
+                <button id="addQuestion" class="btn btn-primary">
+                    <span class="btn-icon">❓</span>
+                    <span>질문 추가</span>
+                </button>
+                <button id="addAnswer" class="btn btn-success">
+                    <span class="btn-icon">✅</span>
+                    <span>답변 추가</span>
+                </button>
+            </div>
+            <div class="control-group">
+                <button id="addConnection" class="btn btn-info">
+                    <span class="btn-icon">🔗</span>
+                    <span>연결 모드</span>
+                </button>
+                <button id="clearAll" class="btn btn-danger">
+                    <span class="btn-icon">🗑️</span>
+                    <span>전체 삭제</span>
+                </button>
+                <button id="exportTree" class="btn btn-warning">
+                    <span class="btn-icon">💾</span>
+                    <span>저장하기</span>
+                </button>
+            </div>
+        </div>
+
+        <div class="mode-indicator" id="modeIndicator" style="display: none;">
+            <span>🔗 연결 모드: 시작 블록을 클릭하세요</span>
         </div>
 
         <div class="workspace" id="workspace">
+            <svg id="connectionLayer" class="connection-layer"></svg>
             <div class="instruction">
-                <p>👆 위의 버튼을 눌러 블록을 추가하고, 드래그하여 배치하세요!</p>
+                <div class="instruction-content">
+                    <h2>📚 사용 방법</h2>
+                    <ol>
+                        <li><strong>질문 추가</strong>: 보라색 질문 블록 생성</li>
+                        <li><strong>답변 추가</strong>: 초록색 답변 블록 생성</li>
+                        <li><strong>블록 이동</strong>: 블록을 드래그하여 위치 조정</li>
+                        <li><strong>연결하기</strong>: 연결 모드 → 시작 블록 클릭 → 끝 블록 클릭</li>
+                    </ol>
+                </div>
             </div>
         </div>
     </div>
