무한 캔버스 & PNG 저장 기능 추가

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                     <span class="btn-icon">🔗</span>
                     <span>연결 모드</span>
                 </button>
+                <button id="exportImage" class="btn btn-warning">
+                    <span class="btn-icon">📸</span>
+                    <span>이미지 저장</span>
+                </button>
                 <button id="clearAll" class="btn btn-danger">
                     <span class="btn-icon">🗑️</span>
                     <span>전체 삭제</span>
-                </button>
-                <button id="exportTree" class="btn btn-warning">
-                    <span class="btn-icon">💾</span>
-                    <span>저장하기</span>
                 </button>
             </div>
         </div>
@@ -61,5 +61,6 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </body>
 </html>
